--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite --host :: --port 3000",
     "build": "vite build && node scripts/generate-sitemap.js",
     "preview": "vite preview --host :: --port 3000",
-    "sitemap": "node scripts/generate-sitemap.js"
+    "sitemap": "node scripts/generate-sitemap.js",
+    "netlify-build": "npm run build && cp -r dist build"
   },
   "dependencies": {
     "@emotion/is-prop-valid": "^1.3.1",
@@ -36,6 +37,7 @@
     "clsx": "^2.0.0",
     "cmdk": "^1.0.4",
     "date-fns": "^3.6.0",
+    "dotenv": "^17.2.3",
     "framer-motion": "^10.16.4",
     "globby": "^14.0.1",
     "html5-qrcode": "^2.3.8",
