--- a/.env
+++ b/.env
@@ -5,3 +5,25 @@ FIREBASE_SERVER_KEY=BAHwYo5VME1pPaNkvlLG4R8lMoQyZ-gblT2vpRHxWmBTna0Fw8Qrv8pRaz1Z
 
 VAPID_PUBLIC_KEY=BH_96HQD9GYuB08avOEWE4FT3_k_aiONkw0Yj8zIyyYZOHXkEc1Ya6u9HvlWVYcX0KV-QbF_eFw25FXO8DLwzrk
 VAPID_PRIVATE_KEY=afKZYmEDbCYLTzoY990qwUjw9bVwdCilP2JHhglI0nE
+
+
+
+
+
+# .env.example
+# Variables d'environnement pour le développement
+
+# Supabase
+# VITE_SUPABASE_URL=https://votre-project.supabase.co
+# VITE_SUPABASE_ANON_KEY=votre_anon_key_here
+
+# # Firebase (pour les notifications)
+# NEXT_PUBLIC_FIREBASE_API_KEY=votre_api_key
+# NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=votre-project.firebaseapp.com
+# NEXT_PUBLIC_FIREBASE_PROJECT_ID=votre-project-id
+# NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=votre-project.appspot.com
+# NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=123456789
+# NEXT_PUBLIC_FIREBASE_APP_ID=1:123456789:web:abcdef123456
+
+# # Autres variables
+# NEXT_PUBLIC_SITE_URL=https://bonplaninfos.net
