--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "private": true,
   "scripts": {
     "dev": "vite --host :: --port 3000",
-    "build": "vite build && node scripts/generate-sitemap.js",
+    "build": "node tools/generate-llms.js || true && vite build",
     "preview": "vite preview --host :: --port 3000",
     "sitemap": "node scripts/generate-sitemap.js",
-    "netlify-build": "npm run build && cp -r dist build"
+    "eslint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "@babel/traverse": "^7.26.4",
     "@emotion/is-prop-valid": "^1.3.1",
     "@floating-ui/react": "^0.26.9",
     "@radix-ui/react-accordion": "^1.2.2",
@@ -19,13 +20,13 @@
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.0",
+    "@radix-ui/react-hover-card": "^1.0.7",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-progress": "^1.1.1",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
@@ -34,34 +35,31 @@
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@supabase/supabase-js": "2.30.0",
-    "browser-image-compression": "^2.0.2",
-    "canvas-confetti": "^1.9.4",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^1.0.4",
     "date-fns": "^3.6.0",
-    "dotenv": "^17.2.3",
-    "firebase": "^12.6.0",
+    "dotenv": "^16.4.7",
     "framer-motion": "^10.16.4",
     "globby": "^14.0.1",
     "html5-qrcode": "^2.3.8",
     "i18next": "^23.10.1",
     "i18next-browser-languagedetector": "^7.2.1",
-    "jspdf": "^3.0.4",
+    "jspdf": "^2.5.1",
     "lucide-react": "^0.292.0",
-    "qrcode": "^1.5.4",
+    "qrcode": "^1.5.3",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-date-range": "^2.0.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "react-hot-toast": "^2.6.0",
+    "react-hook-form": "^7.54.2",
     "react-i18next": "^14.1.0",
     "react-router-dom": "^6.16.0",
     "recharts": "^2.12.7",
-    "resend": "^6.5.2",
-    "sonner": "^2.0.7",
+    "sonner": "^1.7.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
@@ -72,7 +70,6 @@
   "devDependencies": {
     "@babel/generator": "^7.27.0",
     "@babel/parser": "^7.27.0",
-    "@babel/traverse": "^7.27.0",
     "@babel/types": "^7.27.0",
     "@types/node": "^20.8.3",
     "@types/react": "^18.2.15",
@@ -84,7 +81,6 @@
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3",
     "terser": "^5.39.0",
-    "vite": "^4.4.5",
-    "vite-plugin-imagemin": "^0.6.1"
+    "vite": "^4.4.5"
   }
 }
