--- a/package.json
+++ b/package.json
@@ -5,18 +5,17 @@
   "private": true,
   
   "scripts": {
-    "dev": "vite --host :: --port 3000",
-    "build": "vite build && node scripts/generate-sitemap.js",
+  "dev": "vite --host :: --port 3000",
+  "build": "vite build && node scripts/generate-sitemap.js && node scripts/generate-news-sitemap.js",
     "preview": "vite preview --host :: --port 3000",
     "sitemap": "node scripts/generate-sitemap.js",
-    "netlify-build": "npm run build && xcopy dist build /E /I /Y",
-    
-   
-    "start": "npm run dev",
-    "clean": "node scripts/clean-cache.js",
-    "fresh": "npm run clean && npm install && npm run dev",
-    "restart": "npm run clean && npm run dev"
-  },
+    "netlify-build": "npm run build && cp -r dist build",
+
+  "start": "npm run dev",
+  "clean": "node scripts/clean-cache.js",
+  "fresh": "npm run clean && npm install && npm run dev",
+  "restart": "npm run clean && npm run dev"
+},
 
   "dependencies": {
     "@emotion/is-prop-valid": "^1.3.1",
