--- a/package.json
+++ b/package.json
@@ -3,21 +3,19 @@
   "type": "module",
   "version": "0.0.0",
   "private": true,
-  
   "scripts": {
-  "dev": "vite --host :: --port 3000",
-  "build": "vite build && node scripts/generate-sitemap.js && node scripts/generate-news-sitemap.js",
+    "dev": "vite --host :: --port 3000",
+    "build": "node tools/generate-llms.js || true && vite build",
     "preview": "vite preview --host :: --port 3000",
     "sitemap": "node scripts/generate-sitemap.js",
     "netlify-build": "npm run build && cp -r dist build",
-
-  "start": "npm run dev",
-  "clean": "node scripts/clean-cache.js",
-  "fresh": "npm run clean && npm install && npm run dev",
-  "restart": "npm run clean && npm run dev"
-},
-
+    "start": "npm run dev",
+    "clean": "node scripts/clean-cache.js",
+    "fresh": "npm run clean && npm install && npm run dev",
+    "restart": "npm run clean && npm run dev"
+  },
   "dependencies": {
+    "@babel/traverse": "^7.26.4",
     "@emotion/is-prop-valid": "^1.3.1",
     "@floating-ui/react": "^0.26.9",
     "@radix-ui/react-accordion": "^1.2.2",
@@ -26,6 +24,7 @@
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.0",
+    "@radix-ui/react-hover-card": "^1.1.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-progress": "^1.1.1",
@@ -72,6 +71,7 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
+    "vaul": "^0.9.0",
     "web-push": "^3.6.7",
     "xlsx": "^0.18.5",
     "xlsx-js-style": "^1.2.0"
@@ -79,7 +79,6 @@
   "devDependencies": {
     "@babel/generator": "^7.27.0",
     "@babel/parser": "^7.27.0",
-    "@babel/traverse": "^7.27.0",
     "@babel/types": "^7.27.0",
     "@types/node": "^20.8.3",
     "@types/react": "^18.2.15",
