--- a/package.json
+++ b/package.json
@@ -92,5 +92,8 @@
     "terser": "^5.39.0",
     "vite": "^4.4.5",
     "vite-plugin-imagemin": "^0.6.1"
-  }
+  },
+  "engines": {
+  "node": ">=18 <=20"
+}
 }
