--- a/package.json
+++ b/package.json
@@ -84,12 +84,12 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
-    "autoprefixer": "^10.4.19",
+    "autoprefixer": "^10.4.0",
     "eslint": "^8.57.1",
     "eslint-config-react-app": "^7.0.1",
-    "fraction.js": "^5.3.4",
-    "postcss": "^8.4.38",
-    "tailwindcss": "3.4.17",
+    "fraction.js": "^4.3.7",
+    "postcss": "^8.4.0",
+    "tailwindcss": "^3.4.0",
     "terser": "^5.39.0",
     "vite": "4.5.14",
     "vite-plugin-imagemin": "^0.6.1"
